--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
+    "max-listeners-exceeded-warning": "0.0.1",
     "mongodb": "^3.6.8",
     "node": "^16.1.0",
     "nodemon": "^2.0.7",
